# iqr-vision

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
iqr_vision/cli/: __main__.py  cli.py  install.py  test.py
iqr_vision/multivideo/: __init__.py  post.py  record.py
iqr_vision/multivideo/module/: run.sh
iqr_vision/multivideo/scripts/: filter.sh
iqr_vision_utils/: __init__.py
iqr_vision_utils/cli/: __main__.py  install.py  test.py
iqr_vision_utils/multivideo/: post.py  record.py
iqr_vision_utils/multivideo/module/: CMakeLists.txt  install.sh  main.cpp
